# qr-test

./: .gitignore  CMakeLists.txt  readme.md  version.h.in
src/: main.cpp
